# naver-stock-report

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
models/: database.py
scrapers/: naver.py
utils/: telegram_util.py
